// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Community {
  id        Int      @id @default(autoincrement())
  name      String
  users User[] @relation(name: "Community")
}

model Auth {
  id        Int      @id @default(autoincrement())
  githubId String
  githubLogin String
  users User[] @relation(name: "Auth")
}

model User {
  id        Int      @id @default(autoincrement())
  createdAt   DateTime @default(now())
  name      String
  matchingPoint Int
  bio String
  driverPost Post[] @relation(name: "Driver")
  navigatorPost Post[] @relation(name: "Navigator")
  messages Message[] @relation(name: "createdBy")
  auth Auth @relation(name: "Auth", fields: [authId], references: [id])
  authId Int
  community Community @relation(name: "Community", fields: [communityId], references: [id])
  communityId Int
}

model Post {
  id          String      @id @default(uuid())
  createdAt   DateTime @default(now())
  description String
  title       String
  driver      User? @relation(name: "Driver", fields: [driverId], references: [id])
  driverId    Int?
  navigator   User? @relation(name: "Navigator", fields: [navigatorId], references: [id])
  navigatorId Int?
  completedAt DateTime?
  messages        Message[] @relation(name: "Message")
  requiredSkills Skill[] @relation(name: "RequiredBy")
}

model Message {
  id          Int      @id @default(autoincrement())
  post        Post     @relation(name: "Message", fields: [postId], references: [id])
  postId      String
  content     String
  createdAt DateTime @default(now())
  createdBy User @relation(name: "createdBy", fields: [createdById], references: [id])
  createdById Int
}

model Skill {
  id          Int      @id @default(autoincrement())
  name        String
  requiredBy  Post[] @relation(name: "RequiredBy")
}
