@startuml P2P-matching db

entity Community {
  int id
  varchar name
}

entity Auth {
  int id
  varchar githubId
}

entity User {
  int id
  int communityId <<FK>>
  int authId <<FK>>
  varchar name
  int matchingPoint
  text bio
}

entity Message {
  int id
  int postId <<FK>>
  int authorId
  text content
  datetime createdAt
}

entity Post {
  int id
  varchar title
  varchar description
  int driverId <<FK>>
  int navigatorId <<FK>>
  datetime completedAt
  varchar meetingUrl
}

entity Skill { 
  int id
  varchar name
}

Community ||..|{ User
Auth ||..|{ User
User ||..|{ Post
Post }|..|{ Skill
Post ||..|{ Message

@enduml
